# what flags you want to pass to the C compiler & linker
noinst_LTLIBRARIES = libsrc3party.la

libsrc3party_la_CPPFLAGS= \
-I../src_3party/lua-5.2.1/src \
-I../src_3party/ \
-I../src_3party/linuxcs \
-I../src_3party/srutil \
-I../src_3party/uuid \
-I../src_3party/rapidjson \
-I../src_3party/libcrash-master \
-I../src_3party/gtest_src \
-I../src_3party/FakeIt

libsrc3party_la_SOURCES= \
../src_3party/linuxservice.cpp \
../src_3party/linuxcs/linuxcs.cpp \
../src_3party/lua-5.2.1/src/lapi.c \
../src_3party/lua-5.2.1/src/lauxlib.c \
../src_3party/lua-5.2.1/src/lbaselib.c \
../src_3party/lua-5.2.1/src/lbitlib.c \
../src_3party/lua-5.2.1/src/lcode.c \
../src_3party/lua-5.2.1/src/lcorolib.c \
../src_3party/lua-5.2.1/src/lctype.c \
../src_3party/lua-5.2.1/src/ldblib.c \
../src_3party/lua-5.2.1/src/ldebug.c \
../src_3party/lua-5.2.1/src/ldo.c \
../src_3party/lua-5.2.1/src/ldump.c \
../src_3party/lua-5.2.1/src/lfunc.c \
../src_3party/lua-5.2.1/src/lgc.c \
../src_3party/lua-5.2.1/src/linit.c \
../src_3party/lua-5.2.1/src/liolib.c \
../src_3party/lua-5.2.1/src/llex.c \
../src_3party/lua-5.2.1/src/lmem.c \
../src_3party/lua-5.2.1/src/loadlib.c \
../src_3party/lua-5.2.1/src/lobject.c \
../src_3party/lua-5.2.1/src/lopcodes.c \
../src_3party/lua-5.2.1/src/loslib.c \
../src_3party/lua-5.2.1/src/lparser.c \
../src_3party/lua-5.2.1/src/lstate.c \
../src_3party/lua-5.2.1/src/lstring.c \
../src_3party/lua-5.2.1/src/lstrlib.c \
../src_3party/lua-5.2.1/src/ltable.c \
../src_3party/lua-5.2.1/src/ltablib.c \
../src_3party/lua-5.2.1/src/lua.c \
../src_3party/lua-5.2.1/src/luac.c \
../src_3party/lua-5.2.1/src/lundump.c \
../src_3party/lua-5.2.1/src/lvm.c \
../src_3party/lua-5.2.1/src/lzio.c \
../src_3party/uuid/clear.c \
../src_3party/uuid/compare.c \
../src_3party/uuid/copy.c \
../src_3party/uuid/gen_uuid.c \
../src_3party/uuid/isnull.c \
../src_3party/uuid/pack.c \
../src_3party/uuid/parse.c \
../src_3party/uuid/tst_uuid.c \
../src_3party/uuid/unpack.c \
../src_3party/uuid/unparse.c \
../src_3party/uuid/uuid_time.c


