####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libOneWire++.la


INCLUDES = $(all_includes)


LDFLAGS =          


libOneWire___la_LDFLAGS = -version-info 0:0:0

libOneWire___la_METASOURCES = AUTO

libOneWire___la_SOURCES = LOW_objectIDFactory.cpp LOW_objectSynchronizer.cpp LOW_network.cpp LOW_netSegment.cpp LOW_helper_msglog.cpp LOW_helper_crc.cpp LOW_exception.cpp LOW_deviceIDRaw.cpp LOW_deviceID.cpp LOW_device.cpp LOW_component.cpp 

SUBDIRS = platformOW++ deviceOW++ componentOW++ threadOW++ linkOW++ portOW++ 

EXTRA_DIST = LOW_component.cpp LOW_component.h LOW_device.cpp LOW_device.h LOW_deviceID.cpp LOW_deviceID.h LOW_deviceIDRaw.cpp LOW_deviceIDRaw.h LOW_exception.cpp LOW_exception.h LOW_helper_crc.cpp LOW_helper_crc.h LOW_helper_msglog.cpp LOW_helper_msglog.h LOW_netSegment.cpp LOW_netSegment.h LOW_network.cpp LOW_network.h LOW_types.h LOW_objectSynchronizer.cpp LOW_objectSynchronizer.h LOW_objectSynchronizerMacros.h LOW_objectIDFactory.cpp LOW_objectIDFactory.h 

install-data-local:
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_component.h $(includedir)/OneWire++/LOW_component.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_device.h $(includedir)/OneWire++/LOW_device.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_deviceID.h $(includedir)/OneWire++/LOW_deviceID.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_deviceIDRaw.h $(includedir)/OneWire++/LOW_deviceIDRaw.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_exception.h $(includedir)/OneWire++/LOW_exception.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_helper_crc.h $(includedir)/OneWire++/LOW_helper_crc.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_helper_msglog.h $(includedir)/OneWire++/LOW_helper_msglog.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_netSegment.h $(includedir)/OneWire++/LOW_netSegment.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_network.h $(includedir)/OneWire++/LOW_network.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_types.h $(includedir)/OneWire++/LOW_types.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_objectSynchronizer.h $(includedir)/OneWire++/LOW_objectSynchronizer.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_objectSynchronizerMacros.h $(includedir)/OneWire++/LOW_objectSynchronizerMacros.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_objectIDFactory.h $(includedir)/OneWire++/LOW_objectIDFactory.h

uninstall-local:
	-rm -f $(includedir)/OneWire++/LOW_component.h
	-rm -f $(includedir)/OneWire++/LOW_device.h
	-rm -f $(includedir)/OneWire++/LOW_deviceID.h
	-rm -f $(includedir)/OneWire++/LOW_deviceIDRaw.h
	-rm -f $(includedir)/OneWire++/LOW_exception.h
	-rm -f $(includedir)/OneWire++/LOW_helper_crc.h
	-rm -f $(includedir)/OneWire++/LOW_helper_msglog.h
	-rm -f $(includedir)/OneWire++/LOW_netSegment.h
	-rm -f $(includedir)/OneWire++/LOW_network.h
	-rm -f $(includedir)/OneWire++/LOW_types.h
	-rm -f $(includedir)/OneWire++/LOW_objectSynchronizer.h
	-rm -f $(includedir)/OneWire++/LOW_objectSynchronizerMacros.h
	-rm -f $(includedir)/OneWire++/LOW_objectIDFactory.h

####### kdevelop will overwrite this part!!! (end)############
