####### kdevelop will overwrite this part!!! (begin)##########
lib_LTLIBRARIES = libthreadOW++.la


INCLUDES = $(all_includes)


LDFLAGS =          


libthreadOW___la_LDFLAGS = -version-info 0:0:0

libthreadOW___la_METASOURCES = AUTO

libthreadOW___la_SOURCES = LOW_thread_rwlock_POSIX.cpp LOW_thread_rwlock.cpp LOW_thread_thread_POSIX.cpp LOW_thread_mutex_POSIX.cpp LOW_thread_Factory.cpp LOW_thread_thread.cpp LOW_thread_runable.cpp LOW_thread_mutex.cpp 


EXTRA_DIST = LOW_thread_mutex.cpp LOW_thread_mutex.h LOW_thread_runable.cpp LOW_thread_runable.h LOW_thread_thread.cpp LOW_thread_thread.h LOW_thread_Factory.cpp LOW_thread_Factory.h LOW_thread_mutex_POSIX.cpp LOW_thread_mutex_POSIX.h LOW_thread_thread_POSIX.cpp LOW_thread_thread_POSIX.h LOW_thread_rwlock.cpp LOW_thread_rwlock.h LOW_thread_rwlock_POSIX.cpp LOW_thread_rwlock_POSIX.h 

install-data-local:
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_mutex.h $(includedir)/OneWire++/LOW_thread_mutex.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_runable.h $(includedir)/OneWire++/LOW_thread_runable.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_thread.h $(includedir)/OneWire++/LOW_thread_thread.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_Factory.h $(includedir)/OneWire++/LOW_thread_Factory.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_mutex_POSIX.h $(includedir)/OneWire++/LOW_thread_mutex_POSIX.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_thread_POSIX.h $(includedir)/OneWire++/LOW_thread_thread_POSIX.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_rwlock.h $(includedir)/OneWire++/LOW_thread_rwlock.h
	$(mkinstalldirs) $(includedir)/OneWire++/
	$(INSTALL_DATA) $(srcdir)/LOW_thread_rwlock_POSIX.h $(includedir)/OneWire++/LOW_thread_rwlock_POSIX.h

uninstall-local:
	-rm -f $(includedir)/OneWire++/LOW_thread_mutex.h
	-rm -f $(includedir)/OneWire++/LOW_thread_runable.h
	-rm -f $(includedir)/OneWire++/LOW_thread_thread.h
	-rm -f $(includedir)/OneWire++/LOW_thread_Factory.h
	-rm -f $(includedir)/OneWire++/LOW_thread_mutex_POSIX.h
	-rm -f $(includedir)/OneWire++/LOW_thread_thread_POSIX.h
	-rm -f $(includedir)/OneWire++/LOW_thread_rwlock.h
	-rm -f $(includedir)/OneWire++/LOW_thread_rwlock_POSIX.h

####### kdevelop will overwrite this part!!! (end)############
